Kommarettelser med Sofie

--- a/Kapitel1/FysikBaggrund.tex
+++ b/Kapitel1/FysikBaggrund.tex
@@ -8,7 +8,7 @@ $k$ kaldes i denne sammenhæng for fjederkonstanten.
 
 \subsection{Newtons anden lov}\label{teori:Newtons anden lov}
 Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor meget objektet vil accelerere. 
-Den siger, at massen ganget med accelerationen af et objekt, giver den kraft, som objektet bliver påvirket med\refFysA{217}.
+Den siger, at massen ganget med accelerationen af et objekt giver den kraft, som objektet bliver påvirket med\refFysA{217}.
 
 \subsection{Vindmodstand}\label{teori:vindmodstand}
 Når et objekt bevæger sig gennem luft eller en væske med en fart $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre farten mindre.
