--- a/Kapitel2/DenKomplekseEksponentialfunktion.tex
+++ b/Kapitel2/DenKomplekseEksponentialfunktion.tex
@@ -1,5 +1,5 @@
 \section{Den komplekse eksponentialfunktion}
-I gymnasiet bliver man kort introduceret til de komplekse tal, og jeg tager derfor for givet, at læseren kan løse en andengradsligning hvor diskriminanten er skarpt mindre end $0$ og derfor giver to komplekse løsninger. 
+I gymnasiet bliver man kort introduceret til de komplekse tal, og jeg tager derfor for givet, at læseren kan løse en andengradsligning, hvor diskriminanten er skarpt mindre end $0$ og derfor giver to komplekse løsninger. 
 I gymnasiet lærer man dog ikke, at kunne opløfte tal i komplekse tal. 
 Dette er dog en nødvendighed at kunne i denne opgave. 
 Jeg vil derfor introducere definitionen af eksponentialfunktionen defineret på de komplekse tal $\mC$. 
