--- a/Kapitel3/KonklusionSamlet.tex
+++ b/Kapitel3/KonklusionSamlet.tex
@@ -1,10 +1,10 @@
 \section{Opsummering af forsøg 1 og 2}
 I både forsøg 1 og 2 har det være muligt at bruge den andenordens lineære homogene differentialligningsmodel til at beskrive bevægelsen. 
-Det viser sig, at den tid som loddet svinger, er det der betyder mest for, om dæmpningsledet skal tages i betragtning. 
-Det viser sig også at tiden lodet svinger har betydning for om modellen kan bruges. 
-Ved de forholdsvist lave amplituder som jeg har studeret i forsøg 2, har det vist sig at modellen bliver for upræcise efter ca. 40 sekunder. 
+Det viser sig, at den tid som loddet svinger, er det, der betyder mest for, om dæmpningsledet skal tages i betragtning. 
+Det viser sig også, at tiden lodet svinger har betydning for, om modellen kan bruges. 
+Ved de forholdsvis lave amplituder, som jeg har studeret i forsøg 2, har det vist sig, at modellen bliver for upræcis efter ca. 40 sekunder. 
 
-Hvis modellen skal kunne bruges over en længere tidsperiode, blive man nødt til at bruge en numerisk løsning af den ikke lineære model som er beskrevet tidligere.
-I denne forbindelse vil det være optimalt at bestemme $\mu$ ud fra mere specifik teori om vindmodstand, da størrelsen ikke ser ud til at kunne bestemmes entydigt ud fra disse forsøg, grundet de varierende værdier af $a$ i tabel \ref{tabel: best fit exp2}.
+Hvis modellen skal kunne bruges over en længere tidsperiode, bliver man nødt til at bruge en numerisk løsning af den ikke-lineære model, som er beskrevet tidligere.
+I denne forbindelse vil det være optimalt at bestemme $\mu$ ud fra mere specifik teori om vindmodstand, da størrelsen ikke ser ud til at kunne bestemmes entydigt ud fra disse forsøg - grundet de varierende værdier af $a$ i tabel \ref{tabel: best fit exp2}.
 
 Dog er modellen meget præcis og får lave afvigelser eksperimentelt, derfor ser differentialligningerne ud til at være et stærkt værktøj til at beskrive modellen. 
