--- a/Kapitel2/AndenOrdenKompleks.tex
+++ b/Kapitel2/AndenOrdenKompleks.tex
@@ -2,7 +2,7 @@
 \label{teori: Komplekse losninger i karakterligningen}
 Jeg vil ikke føre fuldstændigt bevis for den fuldstændige løsning, når løsningerne til karakterligningen er komplekse. 
 Dette gør jeg ikke, fordi beviset minder meget om beviset for sætning \ref{thm: fuldstandig losning}.
-Grunden til at jeg har valgt, at gennemføre beviset med reelle løsninger til karakterligningen i stedet for komplekse er, at det med komplekse rødder kræver mere kendskab til de komplekse tal.
+Grunden til at jeg har valgt at gennemføre beviset med reelle løsninger til karakterligningen i stedet for komplekse, er, at det med komplekse rødder kræver mere kendskab til de komplekse tal.
 
 Man kunne formode ud fra sætning \ref{thm: fuldstandig losning}, at løsningerne ville være på formen $C\cdot e^{r_1 x} + D \cdot e^{r_2 x}$.
 Her bliver vi dog nødt til først at bemærke noget om $r_1$ og $r_2$.
@@ -12,11 +12,11 @@ Man kunne derfor tænke, at løsningen til den lineære andenordens differential
 Dette kan vi dog skrive om med definition \ref{def: Den komplekse eksponentialfunktion} til $Ce^{ax}(\cos(bx) + \sin(bx) i) + De^{ax}(\cos(-bx) + \sin(-bx) i)$.
 Vi kan da flytte $e^{a}$ udenfor parentes og få 
 $e^{ax}(C(\cos(bx) + \sin(bx) i) + D(\cos(-bx) + \sin(-bx) i))$.
-Da det gælder om cosinus og sinus at $\cos(-x)=\cos(x)$ og $\sin(-x)=-\sin(x)$, kan vi videre omskrive til 4
+Da det gælder om cosinus og sinus, at $\cos(-x)=\cos(x)$ og $\sin(-x)=-\sin(x)$, kan vi videre omskrive til 4
 $e^{ax}(C(\cos(bx) + \sin(bx) i) + D(\cos(bx) - \sin(bx) i))$. 
-Dette kan ved brug af additionsformlen for sinus omskrives videre til $e^{ax}\cdot \sqrt{C^2 + D^2}\sin(bx+\phi)$. 
+Dette kan, ved brug af additionsformlen for sinus, omskrives videre til $e^{ax}\cdot \sqrt{C^2 + D^2}\sin(bx+\phi)$. 
 Jeg vil ikke føre et dybdegående argument for den sidste omskrivning.
-Dette skyldes, at der kræves en forholdvist dybdegående forståelse for de trigonometriske funktioner for at kunne gennemføre argumentet. 
+Dette skyldes, at der kræves en forholdsvis dybdegående forståelse for de trigonometriske funktioner for at kunne gennemføre argumentet. 
 Argumentet for omskrivningen kan ses i Kalkulus\refKalkulus{538-539}.
 
 Man kan argumentere for, at mængden af alle funktioner på den før omtalte form er den fuldstændige løsning til den lineære andenordens homogene differentialligning, når den har komplekse rødder i sin karakterligning. 
