--- a/abstract.tex
+++ b/abstract.tex
@@ -1,11 +1,10 @@
 \section*{Abstract}
 \thispagestyle{plain}
-The aim of this paper is to make a mathemathical model describing the harmonic motion of an object in a spring. 
 
 This paper examines the harmonic motion. 
 By examining the physical laws of springs and mechanical physics more generally it proposes a mathematical model of the motion of an object hanging in a spring.
 
-To easily solve these differential equations found in physics, this report examines them more generally by using mathemathical analasys. 
+To easily solve these differential equations found in physics, this report examines them more generally by using mathemathical analysis. 
 It describes the complete solution to the second order linear homogeneous differential equation, and gives a partial proof that the solution proposed is the complete solution. 
 
 Having explained how to solve the differential equation, it then examines experiments meant to test whether the model of differential equations proposed about the motion are accurate.
@@ -17,5 +16,4 @@ At the same time it shows why the model is a harder mathematical problem to solv
 
 Finally, the paper examines how this physical model can be used to describe the suspension system of a car.
 
-In conclusion the paper sets up a model that describes the motion of the spring well in the beginning of the motion, but gets worse as time progresses. 
 
