Mors rettelser til kapitel 1

--- a/Kapitel1/MatematikBaggrund.tex
+++ b/Kapitel1/MatematikBaggrund.tex
@@ -1,4 +1,4 @@
-\section{Nødvendig matematisk baggrundsteori}
+\section{Matematisk baggrundsteori}
 \subsection{Differentialligninger}
 \newcommand{\LosEks}{$ \{ c\cdot e^{kx}|c\in \mR \} $}%Bruges i sætningen
 Ved en differentialligning forstår vi en funktionnalligning, hvor funktionen minimum et sted er differentieret minimum en gang.
@@ -6,10 +6,10 @@ Ved en funktionalligning forstås en ligning, hvor det er en funktion, der er de
 Med en løsning til en differentialligning, refererer jeg fremover til en funktion, der gør differentialligningen sand. 
 Ved den fuldstændige løsning til en differentialligning, refererer jeg fremover til mængden af \emph{alle} løsninger til differentialligningen. 
 Nedenfor er et eksempel på en differentialligning. 
-Denne er taget med både som eksempel og for at gøre udregninger mere tilgængelige senere.
+Denne er medtaget både som eksempel og for at gøre udregninger mere tilgængelige senere.
 
 \begin{definition}
-Ved en \textit{homogen} differentialligning i variablen $x$, forstås en differentialligning som ikke har et konstantled (et led der ikke ændrer sig med $x$) hvis man tager alle led over på den samme side således at den anden side af lighedstegnet er lig $0$.
+Ved en \textit{homogen} differentialligning i variablen $x$, forstås en differentialligning, som ikke har et konstantled (et led der ikke ændrer sig med $x$), hvis man tager alle led over på den samme side således at den anden side af lighedstegnet er lig $0$.
 \end{definition}
 
 \newcommand{\LDiff}[1]{a_{#1} \cdot \frac{d^{#1}y}{d x^{#1}}}
@@ -28,7 +28,7 @@ Lad $y$ være en differentialbel funktion og $k\in \mR$. Da har  differentiallig
 \end{thm}
 \begin{proof}
 Først vil jeg vise, at alle funktioner i den påståede fuldstændige løsning er løsninger til differentialligningen.
-Antag, at $g$ er en funktion, der ligger i \LosEks .
+Lad $g$ være en funktion, der ligger i \LosEks .
 Da er $g=c\cdot e^{kx}$ for et eller andet reelt tal $c$.
 Jeg indsætter da løsningen i ligningen: 
 
